plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'umc10th'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'

    //Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:3.0.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
        '--add-opens', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
    ]
}
